#file(GLOB SOURCES LIST_DIRECTORIES false CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
file(GLOB HEADERS LIST_DIRECTORIES false CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")

set(SOURCES main.cpp PlayList.cpp Song.cpp)

add_executable(project2 ${SOURCES})
format(FILES ${SOURCES} ${HEADERS})
lint(FILES ${SOURCES})